# ollama-slint

./: .env.example  Cargo.toml  README.md
src/: config.rs  main.rs  ollama.rs
ui/: main.slint
