[package]
name = "local-ollama"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "local-ollama"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ollama-rs = "0.1.5"
reqwest = "0.11.23"
serde_json = "1.0.111"
slint = "1.3.2"
futures = "0.3"
tokio = { version = "1.35.1", features = ["full"] }
dotenv = "0.15.0"

[build-dependencies]
slint-build = "1.3.2"
